--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,9 @@
         <item>9</item>
         <item>Personalizado</item>
     </string-array>
+    <string-array name="Asistentes">
+        <item>Lista de Asistentes</item>
+    </string-array>
     <!-- String Album create Layout -->
     <string name="inputAlbumName">Album name</string>
     <string name="inputAlbumCover">An image url: http://albumImage.png</string>
